[package]
name = "bedrock_wss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.11", default-features = false, features = ["derive", "std"] }
serde = { version = "1.0.167", features = ["derive"] }
serde_json = { version = "1.0.100", features = ["indexmap", "preserve_order"] }
strum = { version = "0.25.0", features = ["derive"] }
uuid = { version = "1.4.0", features = ["v4", "serde"] }
