[package]
name = "wssrock_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bedrock_wss = { version = "0.1.0", path = "../bedrock_wss" }
clap = { version = "4.3.11", features = ["derive"] }
futures = "0.3.28"
json = "0.12.4"
postcard = "1.0.4"
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "tracing"] }
tokio-tungstenite = "0.19.0"
tracing = { version = "0.1.37", features = ["async-await"] }
tracing-subscriber = "0.3.17"
